Run update checks in a COM STA thread.

There's no guarantee that threads in a sequence are initialized into
COM, and running update checks on arbitrary threads as part of a
sequence leads to RPC_E_WRONG_THREAD errors.

BUG=749783
R=pkasting@chromium.org

Change-Id: I82338fe8cf237e616a17c89cda569b6b90867b67
Reviewed-on: https://chromium-review.googlesource.com/590229
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490333}
Former-commit-id: c9c18a6d62d771a20d35a5de43bfc4b33edbd818